# pharma-research-fetcher

./: .gitignore  README.md  pyproject.toml
pubmed_scraper/: fetcher.py  main.py  parser.py  results9.csv  utils.py
