[project]
name = "pubmed-scraper"
version = "0.1.0"
description = "A script to fetch PubMed articles"
authors = [
    {name = "Vamsi", email = "mohanvamsikrishna0828@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.3,<3.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_scraper.main:main"
